==> aaron0990/Thermostat/DS3231.c <==
#include "DS3231.h"

void ds3231_init(DS3231Proxy* ds3231hdl, uint8_t *data_array, uint8_t run_command, uint8_t reset_state)
{
  GPIO_setAsOutputPin(GPIO_PORT_P6, GPIO_PIN6); //DS3231 GND
  GPIO_setOutputLowOnPin(GPIO_PORT_P6, GPIO_PIN6); //Set to LOW to power it on
  ds3231hdl->nextMinuteCheck = 0;
  delay_us(300000);
  DS3231_I2C_init(ds3231hdl->ds3231I2C);
  if (((ds3231_init_status_report(ds3231hdl) == DS3231_NOT_INITIALIZED) && (reset_state == NO_FORCE_RESET)) || (reset_state == FORCE_RESET))
  {
    ds3231_reset(ds3231hdl, ALL);
    ds3231_set(ds3231hdl, TIME, data_array);
  }
  ds3231_init_status_update(ds3231hdl);        /*now the device is initialized (DS3231_INITIALIZED)*/
  ds3231_run_command(ds3231hdl, run_command);
  GPIO_setOutputHighOnPin(GPIO_PORT_P6, GPIO_PIN6); //Set to HIGH to power it off
}

uint8_t ds3231_run_command(DS3231Proxy* ds3231hdl, uint8_t command)
{
  switch (command)
  {
    case CLOCK_RUN:
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL, &register_current_value);
      register_new_value = register_current_value & (~(1 << DS3231_BIT_EOSC));
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL, &register_new_value);
      return OPERATION_DONE;
    case CLOCK_HALT:
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL, &register_current_value);
      register_new_value = register_current_value | (1 << DS3231_BIT_EOSC);
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL, &register_new_value);
      return OPERATION_DONE;
    default:
      return OPERATION_FAILED;
  }
}

uint8_t ds3231_init_status_report(DS3231Proxy* ds3231hdl)
{
  DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL_STATUS, &register_current_value);
  if (register_current_value & (1 << DS3231_BIT_OSF))
    return DS3231_NOT_INITIALIZED;
  else
    return DS3231_INITIALIZED;
}

void ds3231_init_status_update(DS3231Proxy* ds3231hdl)
{
  DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL_STATUS, &register_current_value);
  register_new_value = register_current_value & (~(1 << DS3231_BIT_OSF));
  DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL_STATUS, &register_new_value);
}

void ds3231_reset(DS3231Proxy* ds3231hdl, uint8_t option)
{
  /*data_clone function together with registers_clone static variables, prevent data curroption caused by reconvertig HEX to BCD*/
  ds3231_data_clone(ds3231hdl, TIME, &register_default_value[0]);
  ds3231_data_clone(ds3231hdl, ALARM1, &register_default_value[7]);
  ds3231_data_clone(ds3231hdl, ALARM2, &register_default_value[0X0B]);
  HEX_to_BCD(ds3231hdl, &time_registers_clone[0], 7);
  HEX_to_BCD(ds3231hdl, &alarm1_registers_clone[0], 4);
  HEX_to_BCD(ds3231hdl, &alarm2_registers_clone[0], 3);
  switch (option)
  {
    case SECOND:
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_SECONDS, &time_registers_clone[0]);
      break;
    case MINUTE:
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_MINUTES, &time_registers_clone[1]);
      break;
    case HOUR:
      time_registers_clone[2] &= (~(1 << DS3231_BIT_12_24));        /*to turn on 24 hours format by default*/
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_HOURS, &time_registers_clone[2]);
      break;
    case DAY_OF_WEEK:
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_DAY_OF_WEEK, &time_registers_clone[3]);
      break;
    case DATE:
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_DATE, &time_registers_clone[4]);
      break;
    case MONTH:
      time_registers_clone[5] &= (~(1 << DS3231_BIT_CENTURY));
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_MONTH, &time_registers_clone[5]);
      break;
    case YEAR:
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_YEAR, &time_registers_clone[6]);
      break;
    case CONTROL:
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL, &register_current_value);       /*in order to preserve running state (RUN or HALT)*/
      register_new_value = (register_current_value & (1 << DS3231_BIT_EOSC)) | (register_default_value[0X0E] & (~(1 << DS3231_BIT_EOSC)));
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL, &register_new_value);
      break;
    case CONTROL_STATUS:
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL_STATUS, &register_current_value);       /*in order to preserve OSF flag*/
      register_new_value = (register_current_value & (1 << DS3231_BIT_OSF)) | (register_default_value[0X0F] & (~(1 << DS3231_BIT_EOSC)));
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL_STATUS, &register_new_value);
      break;
    case ALARM1:
      DS3231_I2C_write_multi(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_ALARM1_SECONDS, &alarm1_registers_clone[0], 4);
      break;
    case ALARM2:
      DS3231_I2C_write_multi(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_ALARM2_MINUTES, &alarm2_registers_clone[0], 3);
      break;
    case ALARMS:
      DS3231_I2C_write_multi(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_ALARM1_SECONDS, &alarm1_registers_clone[0], 4);
      DS3231_I2C_write_multi(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_ALARM2_MINUTES, &alarm2_registers_clone[0], 3);
      break;
    case AGING_OFFSET:
      register_new_value = DS3231_REGISTER_AGING_OFFSET_DEFAULT;
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_AGING_OFFSET, &register_new_value);
    case TIME:
      time_registers_clone[2] &= (~(1 << DS3231_BIT_12_24));
      time_registers_clone[5] &= (~(1 << DS3231_BIT_CENTURY));
      DS3231_I2C_write_multi(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_SECONDS, &time_registers_clone[0], 7);
      break;
    case ALL:
      /*TIME registers reset*/
      time_registers_clone[2] &= (~(1 << DS3231_BIT_12_24));        /*to preserve 24 hours mode*/
      time_registers_clone[5] &= (~(1 << DS3231_BIT_CENTURY));        /*resetting century bit*/
      DS3231_I2C_write_multi(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_SECONDS, &time_registers_clone[0], 7);       /*to reset all the TIME registers*/
      /*CONTROL and CONTROL_STATUS registers reset*/
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL_STATUS, &register_current_value);       /*in order to preserve OSF flag*/
      register_new_value = (register_current_value & (1 << DS3231_BIT_OSF)) | (register_default_value[0X0F] & (~(1 << DS3231_BIT_EOSC)));
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL_STATUS, &register_new_value);
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL, &register_current_value);       /*to preserve run_status, either RUN or HALT*/
      register_new_value = (register_current_value & (1 << DS3231_BIT_EOSC)) | (register_default_value[0X0E] & (~(1 << DS3231_BIT_EOSC)));
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL, &register_new_value);
      /*AGING_OFFSET registers reset*/
      register_new_value = DS3231_REGISTER_AGING_OFFSET_DEFAULT;
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_AGING_OFFSET, &register_new_value);
      break;
    default:
      break;
  }
}

uint8_t ds3231_read(DS3231Proxy* ds3231hdl, uint8_t option, uint8_t *data_array)
{
  GPIO_setOutputLowOnPin(GPIO_PORT_P6, GPIO_PIN6); //Set to LOW to power it on
  delay_us(300000);
  switch (option)
  {
    case SECOND:
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_SECONDS, &register_current_value);
      *data_array = register_current_value;
      BCD_to_HEX(ds3231hdl, data_array, 1);
      break;
    case MINUTE:
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_MINUTES, &register_current_value);
      *data_array = register_current_value;
      BCD_to_HEX(ds3231hdl, data_array, 1);
      break;
    case HOUR:
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_HOURS, &register_current_value);
      *data_array = register_current_value;
      BCD_to_HEX(ds3231hdl, data_array, 1);
      break;
    case DAY_OF_WEEK:
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_DAY_OF_WEEK, &register_current_value);
      *data_array = register_current_value;
      BCD_to_HEX(ds3231hdl, data_array, 1);
      break;
    case DATE:
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_DATE, &register_current_value);
      *data_array = register_current_value;
      BCD_to_HEX(ds3231hdl, data_array, 1);
      break;
    case MONTH:
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_MONTH, &register_current_value);
      *data_array = register_current_value;
      BCD_to_HEX(ds3231hdl, data_array, 1);
      break;
    case YEAR:
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_YEAR, &register_current_value);
      *data_array = register_current_value;
      BCD_to_HEX(ds3231hdl, data_array, 1);
      break;
    case CONTROL:
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL, &register_current_value);
      *data_array = register_current_value;
      break;
    case CONTROL_STATUS:
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL_STATUS, &register_current_value);
      *data_array = register_current_value;
      break;
    case AGING_OFFSET:
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_AGING_OFFSET, &register_current_value);
      *data_array = register_current_value;
    case TIME:
      DS3231_I2C_read_multi(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_SECONDS, data_array, 7);
      BCD_to_HEX(ds3231hdl, data_array, 7);
      break;
    default:
      return OPERATION_FAILED;
  }
  GPIO_setOutputHighOnPin(GPIO_PORT_P6, GPIO_PIN6); //Set to HIGH to shut it down
  return OPERATION_DONE;
}

uint8_t ds3231_set(DS3231Proxy* ds3231hdl, uint8_t option, uint8_t *data_array)
{
  GPIO_setOutputLowOnPin(GPIO_PORT_P6, GPIO_PIN6); //Set to LOW to power it on
  delay_us(300000);
  switch (option)
  {
    case SECOND:
      time_registers_clone[0] = *data_array;
      HEX_to_BCD(ds3231hdl, &time_registers_clone[0], 1);
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_SECONDS, &time_registers_clone[0]);
      break;
    case MINUTE:
      time_registers_clone[1] = *data_array;
      HEX_to_BCD(ds3231hdl, &time_registers_clone[1], 1);
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_MINUTES, &time_registers_clone[1]);
      break;
    case HOUR:
      time_registers_clone[2] = *data_array;
      HEX_to_BCD(ds3231hdl, &time_registers_clone[2], 1);
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_HOURS, &time_registers_clone[2]);
      break;
    case DAY_OF_WEEK:
      time_registers_clone[3] = *data_array;
      HEX_to_BCD(ds3231hdl, &time_registers_clone[3], 1);
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_DAY_OF_WEEK, &time_registers_clone[3]);
      break;
    case DATE:
      time_registers_clone[4] = *data_array;
      HEX_to_BCD(ds3231hdl, &time_registers_clone[4], 1);
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_DATE, &time_registers_clone[4]);
      break;
    case MONTH:
      time_registers_clone[5] = *data_array;
      HEX_to_BCD(ds3231hdl, &time_registers_clone[5], 1);
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_MONTH, &time_registers_clone[5]);
      break;
    case YEAR:
      time_registers_clone[6] = *data_array;
      HEX_to_BCD(ds3231hdl, &time_registers_clone[6], 1);
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_YEAR, &time_registers_clone[6]);
      break;
    case CONTROL:
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL, &register_current_value);
      register_new_value = (register_current_value & (1 << DS3231_BIT_EOSC)) | (*data_array & (~(1 << DS3231_BIT_EOSC)));
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL, &register_new_value);
      break;
    case CONTROL_STATUS:
      DS3231_I2C_read_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL_STATUS, &register_current_value);
      register_new_value = (register_current_value & (1 << DS3231_BIT_OSF)) | (*data_array & (~(1 << DS3231_BIT_OSF)));
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_CONTROL_STATUS, &register_new_value);
      break;                                                                                         
    case TIME:
      ds3231_data_clone(ds3231hdl,TIME, data_array);
      HEX_to_BCD(ds3231hdl, &time_registers_clone[0], 7);
      DS3231_I2C_write_multi(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_SECONDS, &time_registers_clone[0], 7);
      break;
    case AGING_OFFSET:
      register_new_value = *data_array;
      DS3231_I2C_write_single(ds3231hdl->ds3231I2C, DS3231_I2C_ADDRESS, DS3231_REGISTER_AGING_OFFSET, &register_new_value);
      break;
    default:
      return OPERATION_FAILED;
  }
  GPIO_setOutputHighOnPin(GPIO_PORT_P6, GPIO_PIN6); //Set to HIGH to power it off
  return OPERATION_DONE;
}
